# gemfileparser

./: .gitignore  AUTHORS  CHANGELOG.rst  LICENSE  LICENSE.MIT  MANIFEST  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  requirements.txt  setup.cfg  setup.py
gemfileparser/: __init__.py  gemfileparser.py  gemfileparser.py.bak
tests/: .Gemfile_2.swp  Gemfile_1  Gemfile_2  Gemfile_3  Gemfile_4  Gemfile_5-expected.json  address_standardization.gemspec-expected.json  arel.gemspec-expected.json  gemfileparser_tests.py  logstash-mixin-ecs_compatibility_support.gemspec  logstash-mixin-ecs_compatibility_support.gemspec-expected.json  test_gemfileparser.py  test_gemfileparser2.py
tests/data/gemfiles/: Gemfile_1-expected.json  Gemfile_2-expected.json  Gemfile_3-expected.json  Gemfile_4-expected.json  Gemfile_5
tests/data/gemspecs/: arel2.gemspec  arel2.gemspec-expected.json  sample.gemspec  sample.gemspec-expected.json
