[metadata]
name = gemfileparser
version = 0.8.0

description = Parse Ruby Gemfile, .gemspec and Cocoapod .podspec files using Python.
long_description = file: README.rst

author = Balasankar C, Rohit Potter, nexB. Inc. and others
author_email = info@aboutcode.org

keywords = Ruby Rubygem Gemfile gemspec Cocoapod podspec
url = https://github.com/gemfileparser/gemfileparser

license = GPL-3.0-or-later OR MIT
license_files =
    README.rst
    LICENSE.GPLv3
    LICENSE.MIT

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.6.*


[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 6.0.0
    black

docs =
    Sphinx >= 3.3.1
    sphinx-rtd-theme >= 0.5.0
    doc8 >= 0.8.1
