[bdist_wheel]
universal = 1

[metadata]
name = gemfileparser
version = 0.8.1

description = Parse Ruby Gemfile, .gemspec and Cocoapod .podspec files using Python.
long_description = file: README.rst

author = Balasankar C
author_email = balasankarc@autistici.org

keywords = Ruby Rubygem Gemfile gemspec Cocoapod podspec
url = https://github.com/gemfileparser/gemfileparser

license = GPL-3.0-or-later OR MIT
license_files =
    README.rst
    LICENSE.GPLv3
    LICENSE.MIT

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
