[metadata]
name = gemfileparser2

description = Parse Ruby Gemfile, .gemspec and Cocoapod .podspec files using Python.
long_description = file: README.rst

author = Balasankar C, Rohit Potter, nexB. Inc. and others
author_email = info@aboutcode.org

keywords = Ruby Rubygem Gemfile gemspec Cocoapod podspec
url = https://github.com/nexB/gemfileparser2

license = GPL-3.0-or-later OR MIT
license_files =
    README.rst
    LICENSE.GPLv3
    LICENSE.MIT

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    utilities

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

py_modules =
    gemfileparser
    gemfileparser2


setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 7.0.2
    pycodestyle >= 2.8.0
    twine
    black
    isort

docs =
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2

